# oceanmotion

./: .gitignore  Dockerfile  LICENCE.txt  README.md  convert_to_onnx.py  cthulhu_fan.npz  fast_eval.py  fast_eval_onnx.py  groups_eval.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_cuda.txt  run.py  run_onnx.py  sweep.yml  testset_test.py  train.py  visualise.py
data/: dataset.py  dataset_presplit.py  generate.py
docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
eval/: detection.py  eval.py  glf.py
model/: loss.py  model.py  model_parts.py  test.py  validate.py
tests/: let-late-young-result_00_00-00-256-3264_853_mask.npz  look-final-human-air_00_00-00-256-3264_854_mask.npz  test_blob.py  test_data.py  test_glf.py
util/: image.py  model.py  tensors.py  video.py
wrappers/java/oceanmotion/: 2023_05_28_22_52_37_478_853.fits.lz4  pom.xml  prediction.webm  temp.fits
wrappers/java/oceanmotion/src/main/java/oceanmotion/: ReadFITS.java  WrapperProg.java
wrappers/java/oceanmotion/src/test/java/oceanmotion/: OceanMotionTest.java
